examples/python/failing/bracketed_imports_issue_320/Right.py
from ..._utils import foo, async_foo
